# list-open-prs

./: Dockerfile  LICENSE  Makefile  README.md  action.yaml  pyproject.toml
src/: list_open_prs.py
